# EE109-Final-Project

./: .gitignore  README.MD  Spectrogram.py  bias_hh_l0.csv  bias_hh_l1.csv  bias_ih_l0.csv  bias_ih_l1.csv  build.sbt  butterfly_controller_tree.html  butterfly_python_tests.py  export_weights.py  fc_bias.csv  fc_weight.csv  fft_imag.csv  fft_real.csv  fft_runner.py  fft_test_log.txt  fft_verification.txt  frame.csv  frames.csv  input_seq.csv  lstm_test_log.txt  lstm_training.ipynb  model_small.pth  old_lstm.ipynb  proj_bias.csv  proj_weight.csv  results.txt  small_lstm_training.ipynb  weight_hh_l0.csv  weight_hh_l1.csv  weight_ih_l0.csv  weight_ih_l1.csv  weights.py
FFTInferenceHLS/design_top/: fft_kernel.cpp  fft_kernel.h  fpga_validation.py  generated_afid.sh  host.cpp  reference_model.py  setup.sh  synth.py  testbench.cpp
FFTInferenceHLS/design_top/design/: concat_top.v  design_top.sv
FFTInferenceHLS/design_top/saved_build_logs/: log_file_list.txt  report_file_list.txt
FFTInferenceHLS/design_top/tmp/workspace_20260601112617/hls_component/hls_component/hls/impl/misc/drivers/fft_kernel_v1_0/src/: CMakeLists.txt  xfft_kernel.c  xfft_kernel_hw.h  xfft_kernel_linux.c  xfft_kernel_sinit.c
FFTInferenceHLS/src/: fft_kernel.cpp  fft_kernel.h  fft_luts.h
LSTMInferenceHLS/design_top/: Makefile  generated_afid.sh  nohup.out  setup.sh  synth.py
LSTMInferenceHLS/design_top/design/: concat_top.v  design_top.sv  design_top_defines.vh
LSTMInferenceHLS/src/: Makefile  test_gemm.cpp  test_lstm.cpp  vadd.cpp
eva's FFT code/: fft.scala  fft_runner.py
(+371 files in other folders)
